# print_addons

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
print_addons/: hooks.py  modules.txt
print_addons/print_addons/doctype/print_addons_settings/: print_addons_settings.js  print_addons_settings.json  print_addons_settings.py  test_print_addons_settings.py
print_addons/public/js/: signature.bundle.js
print_addons/templates/print_formats/: pdf_header_footer.html
